Fix selectize dropdown getting covered by btn-group btn.

--- a/www/static/css/sharkscout.css
+++ b/www/static/css/sharkscout.css
@@ -156,6 +156,16 @@
     position: absolute;
 }
 
+.btn-group-vertical > .btn.active,
+.btn-group-vertical > .btn:active,
+.btn-group-vertical > .btn:focus,
+.btn-group-vertical > .btn:hover,
+.btn-group > .btn.active,
+.btn-group > .btn:active,
+.btn-group > .btn:focus,
+.btn-group > .btn:hover {
+    z-index: auto;
+}
 
 
 /***** DataTables Overrides *****/
